--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
 
 <body>
 
-<!--  <div class="container"></div>-->
-  <canvas id="canvas"></canvas>
-  <div id="surfacePlot"></div>
+  <div class="container">
+    <div>
+      <canvas id="canvas"></canvas>
+    </div>
+    <div>
+      <div id="heatmapPlot"></div>
+    </div>
+    <div>
+      <div id="surfacePlot"></div>
+    </div>
+
+  </div>
+
   <script src="js/main.js"></script>
 </body>
 </html>
